Remove icon on the right side of low disk space error notification.

According to MD notification spec (go/cros-md-notification-mock), all
the notifications should not show an icon on the right side. Instead,
they should show a new icon on the top left. (i.e. |icon| of
CreateSystemNotification should be empty. |small_image| should not be
empty.)

However, ShowLowDiskSpaceErrorNotification have both the right side icon
and the top left icon. This CL removes the right side icon.

BUG=813708
TEST=manual

Change-Id: I1434341b4e1b65dc8ac1e49865fd92fd232dbf92
Reviewed-on: https://chromium-review.googlesource.com/930601
Commit-Queue: Megumi Hattori <megumihattori@google.com>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538706}
Former-commit-id: f7c3a37480869e8c801742229d6d13f47251462e